# imxTools

./: .bumpversion.toml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  build-gui-app.py  cliff.toml  pyproject.toml
.github/: compare_versions.py  dependabot.yml  enforce_version_bump.py
.github/workflows/: build.yml  build_and_release.yml  ci.yml  commit-lint.yml  enforce-version-bump.yml  release.yml  test_and_lint.yml
apps/: build_helpers.py
apps/gui/: main.py
apps/gui/components/: flashbang_toggle.py
apps/gui/components/flows/: measure_correction.py
apps/gui/components/layouts/: drawer_left.py  footer.py  header.py  layout.py  toolPanelWithHelp.py
apps/gui/components/tools/: commentsTool.py  diffTool.py  kmExcelTool.py  kmTool.py  measureTool.py  populationTool.py  revisionTool.py
apps/gui/components/widgets/: flashbang_toggle.py  imxUpload.py  isoTimePicker.py  metadataSettingsUi.py  uploadFile.py  uploadImxFile.py  versionCheckDialog.py
apps/gui/config/: ui_constants.py
apps/gui/data/help_markdowns/: add_km_excel_help.md  comments_tool_help.md  diff_tool_help.md  measure_correction_help.md  population_tool_help.md
apps/gui/helpers/: io.py  klad.py  km_service_manager.py
apps/gui/pages/: add_km_excel_page.py  comment_page.py  diff_page.py  km_page.py  measure_correction_flow_page.py  measure_page.py  population_page.py  revision_page.py
apps/qgis/: gui.py  qgis.py
apps/qgis/poc/: gui_old.py  qgis_old.py
sample_data/comments/: 20250430_202130-diff-edit.xlsx  20250430_202130-diff.xlsx  comment-list.xlsx
src/data/xsd-12.0.0/: IMSpoor-Alignment.xsd  IMSpoor-BGTObjects.xsd  IMSpoor-BasicTypes.xsd  IMSpoor-ERTMS-packets.xsd  IMSpoor-ERTMS-variables.xsd  IMSpoor-ERTMS.xsd  IMSpoor-Extensions.xsd  IMSpoor-Furniture.xsd  IMSpoor-Groupings.xsd  IMSpoor-Infra.xsd  IMSpoor-InstallationDesign.xsd  IMSpoor-Legacy.xsd  IMSpoor-ManagementAreas.xsd  IMSpoor-Manifest.xsd  IMSpoor-NetworkConfiguration.xsd  IMSpoor-Observations.xsd  IMSpoor-RailwayElectrification.xsd  IMSpoor-ReturnCurrents.xsd  IMSpoor-SchemaLayout.xsd  IMSpoor-SignalingDesign.xsd  IMSpoor-SystemConfiguration.xsd  IMSpoor-TrackAssets.xsd  IMSpoor-TrainControl.xsd  IMSpoor-gml.xsd  IMSpoor-gml3.xsd
src/data/xsd-14.0.0/: IMSpoor-Alignment.xsd  IMSpoor-BGTObjects.xsd  IMSpoor-BasicTypes.xsd  IMSpoor-Container.xsd  IMSpoor-DomainIdentification.xsd  IMSpoor-ERTMS-packets.xsd  IMSpoor-ERTMS-variables.xsd  IMSpoor-ERTMS.xsd  IMSpoor-Extensions.xsd  IMSpoor-Furniture.xsd  IMSpoor-Groupings.xsd  IMSpoor-Infra.xsd  IMSpoor-InstallationDesign.xsd  IMSpoor-KilometerValues.xsd  IMSpoor-Legacy.xsd  IMSpoor-ManagementAreas.xsd  IMSpoor-Manifest.xsd  IMSpoor-NetworkConfiguration.xsd  IMSpoor-Observations.xsd  IMSpoor-RailwayElectrification.xsd  IMSpoor-ReturnCurrents.xsd  IMSpoor-SchemaLayout.xsd  IMSpoor-SignalingDesign.xsd  IMSpoor-SystemConfiguration.xsd  IMSpoor-TrackAssets.xsd  IMSpoor-TrainControl.xsd  IMSpoor-all.xsd  IMSpoor-gml.xsd  IMSpoor-gml3.xsd
src/imxTools/: __init__.py  settings.py
src/imxTools/comments/: comment_entry.py  comments_enums.py  comments_extractor.py  comments_replacer.py  openpyxl_helpers.py
src/imxTools/insights/: diff_and_population.py  measure_analyse.py  mesaure_analyse_enums.py
src/imxTools/revision/: imx_modifier.py  input_validation.py  process_revision.py  revision_enums.py  revision_template.py
src/imxTools/utils/: columnEnum.py  custom_logger.py  exceptions.py  geometry_transformers.py  helpers.py  kmExcelProcessor.py  measure_line.py  version_check.py
